[package]
name = "apcupsd-mqtt-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.22.0"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
apcaccess = { version = "0.1.0" }
dotenv = { version = "0.15.0", optional = true }
tokio = { version = "1.32.0", features = ["full"] }

[features]
default = []
dotenv = ["dep:dotenv"]
